--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "jquery": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-popper": "^2.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.7.1",
     "web-vitals": "^0.2.4"
